2011-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R (.onLoad): import module, construct from class 'date'
	* demo/RcppBDT.R: adjusted accordingly

	* cleanup: added simple cleanup script

2011-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): bumped version to 0.0.3

	* R/zzz.R: change initialization after borrowing a better approach
	from John's wls package in the Rcpp repo on R-Forge: now 'bdt' is
	the default instance of the reference class, and the module code is
	available via 'bdtMod'

2011-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppBDT-package.Rd: updated
	* man/dateFunctions.Rd: added documentation on functions
	* man/constants.Rd: added documentation on constants defined
	* man/bdtEnv.Rd: added documentation for bdtEnv variable

	* src/RcppBDT.cpp: Added two new functions for date of first and last
	weekday in a given month and year (eg first Friday in Jan 2011)

	* R/zzz.R:
	  - defined a number of constants: Sun, Mon, Tue, ... , Sat as well
  	    as Jan, Feb, ..., Dec and first, second, ..., fifth
	  - added some documentation on enviroment

	* R/bdt.R:
	  - added function to export core object for access
	  - changed functions to access core object via per-pack. environment
	  - added functions for first/last day-of-week in month/year
	  - some variables renamed in the process of writing documentation

	* demo/RcppBDT.R: updated to keep in sync with other changes

2011-01-06  Dirk Eddelbuettel  <edd@dexter>

	* inst/include/RcppBDT.h: Added paragraph about the UseWithString
	variable with governs whether input/output functionality is loaded
	which then requires linking with the Boost Date_Time library. Default
	is just templates and no input/output given just basic date conversion
	but no parsing from or formatting to string.

	* DESCRIPTION: Expanded Description, mentioned optional linking of
	Boost library to get string to/from date conversion functionality

2011-01-05  Dirk Eddelbuettel  <edd@debian.org>
